⬆️ NET 8 und DevEx 24.2

--- a/XpoTestWebApi/appsettings.json
+++ b/XpoTestWebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "WinLineConnectionString": "Data Source=<WINLINESERVER>;User ID=meso;Password=<MESO-Passwort>;Initial Catalog=<MandantenDatenbank>"
+        "WinLineConnectionString": "Data Source=SQLSERVER;User ID=meso;Password=mesopassword;Initial Catalog=CWLDATEN;"
     },
   "Logging": {
     "LogLevel": {
