--- a/.gitignore
+++ b/.gitignore
@@ -382,3 +382,4 @@ Main/DHLWS2.0-Branch/Output/
 Main/DHLWS2.0-Branch/Setup MESO-Logistics/MESO-Logistics-cache/
 Setup/MESOLogistics-cache
 *.zip
+*appsettings.Development.json
