--- a/WinFormsXpoNet/WinFormsXpoNet.csproj
+++ b/WinFormsXpoNet/WinFormsXpoNet.csproj
@@ -9,8 +9,8 @@
     <Product>Demoprojekte MesoXPO</Product>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="MesoXPO-DevEx25.1" />
-    <PackageReference Include="Microsoft.Data.SqlClient" />
+    <PackageReference Include="MesoXPO-DevEx25.1" Version="2025.4.48" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.1" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
