Ergänze MinimalAPI um Mandanten

--- a/NetCoreMinimalApi/appsettings.json
+++ b/NetCoreMinimalApi/appsettings.json
@@ -1,12 +1,15 @@
 {
-    "ConnectionStrings": {
-        "WinLineConnectionString": "Data Source=SQLSERVER;User ID=meso;Password=mesopassword;Initial Catalog=CWLDATEN;"
-    },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "WinLineConnectionString": "Data Source=SQLSERVER;User ID=meso;Password=mesopassword;Initial Catalog=CWLDATEN;"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "WinLineSettings": {
+      "Company": "500M"
+  },
+  "AllowedHosts": "*"
 }
